# sgx

./: .cruft.json  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  auto_assign.yaml  dependabot.yaml  labeler.yml  pull_request_template.md  settings.yml
.github/workflows/: build.yaml  cargo-audit.yaml  ci.yaml  copyright.yaml  issues.yaml  lint.yaml  notify.yaml  panic-abort.yaml  pr-assign.yaml  pr.yaml  trusted.yaml  untrusted.yaml  workspace.yaml
capable/: Cargo.toml  README.md
capable/ffi/: Cargo.toml
capable/ffi/sys/: Cargo.toml  README.md  build.rs
capable/ffi/sys/src/: lib.rs
capable/ffi/types/: Cargo.toml  README.md  build.rs  wrapper.h
capable/ffi/types/src/: lib.rs
capable/src/: lib.rs
capable/sys/: Cargo.toml  README.md  build.rs
capable/sys/src/: lib.rs
capable/sys/types/: Cargo.toml  README.md  build.rs
capable/sys/types/src/: lib.rs
capable/types/: Cargo.toml  README.md
capable/types/src/: lib.rs
constant_time_derive/: Cargo.toml
constant_time_derive/src/: lib.rs
constant_time_derive/tests/: ct_test.rs
core/: Cargo.toml
core/source/: Cargo.toml  build.rs
core/sys/: Cargo.toml
core/types/: Cargo.toml  README.md
core/types/src/: attestation_key.rs  attributes.rs  config_id.rs  error.rs  key_id.rs  key_request.rs  lib.rs  macros.rs  measurement.rs  quote.rs  report.rs  svn.rs  target_info.rs  traits.rs
crypto/ffi/: Cargo.toml  build.rs
crypto/ffi/src/: lib.rs
crypto/ffi/types/: Cargo.toml
crypto/ffi/types/src/: lib.rs
crypto/sys/: Cargo.toml
dcap/ql/: Cargo.toml  README.md
dcap/ql/src/: lib.rs  quote3.rs  quote_enclave.rs  quote_generator.rs
dcap/ql/sys/: Cargo.toml  README.md  build.rs
dcap/ql/sys/src/: lib.rs
dcap/ql/sys/types/: Cargo.toml  README.md  build.rs
dcap/ql/types/: Cargo.toml  README.md
dcap/ql/types/src/: lib.rs
dcap/quoteverify/: Cargo.toml  README.md
dcap/quoteverify/src/: collateral.rs  lib.rs  quote_enclave.rs  verify.rs
dcap/quoteverify/sys/: Cargo.toml  README.md  build.rs
dcap/quoteverify/sys/src/: lib.rs
dcap/quoteverify/sys/types/: Cargo.toml  README.md  build.rs
dcap/quoteverify/sys/types/src/: lib.rs
dcap/quoteverify/tests/: README.md
dcap/quoteverify/types/: Cargo.toml  README.md
dcap/quoteverify/types/src/: lib.rs
dcap/types/: Cargo.toml  README.md
dcap/types/assets/tests/: README.md
dcap/types/data/tests/: README.md  leaf_cert.der  processor_crl.der
dcap/types/src/: certification_data.rs  collateral.rs  error.rs  lib.rs  quote3.rs  quote_header.rs  quoting_enclave.rs  request_policy.rs  tcb.rs
dcap_ql/sys/: Cargo.toml  README.md  build.rs
dcap_ql/sys/src/: lib.rs
dcap_ql/sys/types/: Cargo.toml  README.md  build.rs  wrapper.h
dcap_ql/sys/types/src/: lib.rs
dcap_quoteverify/sys/: Cargo.toml  README.md  build.rs
dcap_quoteverify/sys/src/: lib.rs
dcap_quoteverify/sys/types/: Cargo.toml  README.md  build.rs  wrapper.h
dcap_quoteverify/sys/types/src/: lib.rs
dcap_quoteverify/types/: Cargo.toml  README.md
dcap_tvl/sys/: Cargo.toml  README.md  build.rs
dcap_tvl/sys/src/: lib.rs
panic/abort/: Cargo.toml  README.md
panic/abort/src/: lib.rs
quote_verify/: Cargo.toml  README.md
quote_verify/src/: lib.rs
sdk-tools/: Cargo.toml  README.md
sdk-tools/src/: edger8r.rs  lib.rs  sign.rs
sdk_tools/: README.md
service/ffi/: Cargo.toml
service/ffi/src/: lib.rs
service/ffi/types/: Cargo.toml  build.rs
service/ffi/types/src/: lib.rs
service/sys/: Cargo.toml
tcrypto/sys/: Cargo.toml  README.md  build.rs
tcrypto/sys/src/: lib.rs
tcrypto/sys/types/: Cargo.toml  README.md  build.rs  wrapper.h
tcrypto/sys/types/src/: lib.rs
tcrypto/types/: Cargo.toml  README.md
test_enclave/: Cargo.toml  README.md  build.rs
test_enclave/src/: config_kss.xml  config_pcl.xml  enclave.c  enclave.edl  enclave.lds  lib.rs
trts/: Cargo.toml  README.md
trts/ffi/: Cargo.toml  build.rs
trts/ffi/src/: lib.rs
trts/src/: lib.rs
trts/sys/: Cargo.toml  README.md  build.rs  wrapper.h
trts/sys/src/: lib.rs
trusted/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
trusted/crypto/: Cargo.toml
trusted/crypto/src/: lib.rs
trusted/crypto/sys/: Cargo.toml  build.rs
trusted/crypto/sys/src/: lib.rs
trusted/crypto/sys/types/: Cargo.toml  build.rs
trusted/crypto/sys/types/src/: lib.rs
trusted/panic/abort/: README.md
trusted/service/: Cargo.toml
trusted/service/src/: lib.rs
trusted/service/sys/: Cargo.toml  build.rs
trusted/service/sys/src/: lib.rs
trusted/service/sys/types/: Cargo.toml  build.rs
trusted/service/sys/types/src/: lib.rs
trusted/trts/sys/: Cargo.toml  README.md  build.rs
trusted/trts/sys/src/: lib.rs
tservice/: Cargo.toml  README.md
tservice/src/: lib.rs  report.rs  seal.rs
tservice/sys/: Cargo.toml  README.md  build.rs  wrapper.h
tservice/sys/src/: lib.rs
tservice/sys/types/: Cargo.toml  README.md  build.rs  wrapper.h
tservice/sys/types/src/: lib.rs
tservice/test_utils/: Cargo.toml  README.md
tservice/test_utils/src/: lib.rs
tservice/types/: Cargo.toml  README.md
tservice/types/src/: diffie_hellman.rs  lib.rs  seal.rs  test_utils.rs
tstdc/: Cargo.toml  README.md
tstdc/src/: condvar.rs  lib.rs  mutex.rs  rwlock.rs
tstdc/sys/: Cargo.toml  README.md  build.rs  wrapper.h
tstdc/sys/src/: lib.rs
tstdc/sys/types/: Cargo.toml  README.md  build.rs  wrapper.h
tstdc/sys/types/src/: lib.rs
untrusted/: .gitignore  Cargo.toml  README.md  build.rs
untrusted/dcap/: Cargo.toml  README.md
untrusted/quote_verify/: Cargo.toml  (+1 more)
urts/: Cargo.toml  README.md
urts/ffi/: Cargo.toml  build.rs
urts/ffi/src/: lib.rs
urts/ffi/types/: Cargo.toml
urts/src/: lib.rs
urts/sys/: Cargo.toml  README.md  build.rs
urts/sys/src/: lib.rs
urts/sys/types/: Cargo.toml  README.md  build.rs
urts/sys/types/src/: lib.rs
util/: Cargo.toml  README.md
util/src/: format.rs  lib.rs
(+69 files in other folders)
