[workspace]
members = [
    "capable",
    "capable/sys",
    "capable/sys/types",
    "capable/types",
    "core/build",
    "core/sys/types",
    "core/types",
    "dcap/ql",
    "dcap/ql/sys",
    "dcap/ql/sys/types",
    "dcap/ql/types",
    "dcap/quoteverify",
    "dcap/quoteverify/sys",
    "dcap/quoteverify/sys/types",
    "dcap/quoteverify/types",
    "dcap/sys/types",
    "dcap/tvl/sys",
    "dcap/types",
    "sdk-tools",
    "tcrypto/sys",
    "tcrypto/sys/types",
    "trts",
    "trts/sys",
    "tservice",
    "tservice/sys",
    "tservice/sys/types",
    "tservice/types",
    "tstdc",
    "tstdc/sys",
    "tstdc/sys/types",
    "urts",
    "urts/sys",
    "urts/sys/types",
    "util",
]
exclude = [
    "test_enclave",
]

# We need to explicitly specify resolver 2.
# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, however if you
# remove this, `getrandom` will fail trying to find `std` when building `mc-sgx-core-types`.  This is because
# `mc-sgx-core-types` uses `rand` in it's `dev-dependencies`.  `rand` will use the `std` feature of `getrandom`, however
# being in `dev-dependencies` it shouldn't normally get pulled in during a build.
# Even specifying `edition = "2021"` here will not fix this
resolver = "2"

[profile.release]
lto = true

[workspace.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"

# The file names in this key are relative to the each crate that gets released.
# So we only need one `README.md` entry if all the README's follow a
# common format and are always next to the Cargo.toml for their respective
# package.
# The downside to this running relative is that updating anything *only* in the
# root will fail to work around this we delegate to `core/build/Cargo.toml` for
# anything that is root specific.
pre-release-replacements = [
    {file="README.md", search="mc-sgx-[a-z-]+/[0-9.]+", replace="{{crate_name}}/{{version}}"},
]
