[workspace]
members = [
    "capable",
    "capable/sys",
    "capable/sys/types",
    "capable/types",
    "core/build",
    "core/sys/types",
    "core/types",
    "dcap/ql",
    "dcap/ql/sys",
    "dcap/ql/sys/types",
    "dcap/ql/types",
    "dcap/quoteverify",
    "dcap/quoteverify/sys",
    "dcap/quoteverify/sys/types",
    "dcap/quoteverify/types",
    "dcap/sys/types",
    "dcap/tvl/sys",
    "dcap/types",
    "sdk-tools",
    "tcrypto/sys",
    "tcrypto/sys/types",
    "trts",
    "trts/sys",
    "tservice",
    "tservice/sys",
    "tservice/sys/types",
    "tservice/types",
    "tstdc",
    "tstdc/sys",
    "tstdc/sys/types",
    "urts",
    "urts/sys",
    "urts/sys/types",
    "util",
]

# We need to explicitly specify resolver 2.
# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, but that does not appear to be the case
resolver = "2"

[workspace.package]
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.68"

[profile.release]
lto = "thin"

[workspace.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"
pre-release-replacements = [
    # Files listed here must exist in all crates in this workspace
    { file = "README.md", search = "mc-sgx-[a-z-]+/[0-9.]+", replace = "{{crate_name}}/{{version}}" },
]
