[package]
name = "mc-sgx-capable"
version = "0.3.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Rust wrappers for the `sgx_capable` library."

categories = ["api-bindings", "hardware-support"]
keywords = ["sgx"]

[dependencies]
mc-sgx-capable-sys = { path = "sys", version = "=0.3.0" }
mc-sgx-capable-sys-types = { path = "sys/types", version = "=0.3.0" }
mc-sgx-capable-types = { path = "types", version = "=0.3.0" }
mc-sgx-core-types = { path = "../core/types", version = "=0.3.0" }
mc-sgx-util = { path = "../util", version = "=0.3.0" }

[dev-dependencies]
yare = "1.0.1"
