[package]
name = "mc-sgx-capable"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrappers for the `sgx_capable` library."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mc-sgx-capable-sys = { path = "sys", version = "=0.6.0" }
mc-sgx-capable-sys-types = { path = "sys/types", version = "=0.6.0" }
mc-sgx-capable-types = { path = "types", version = "=0.6.0" }
mc-sgx-core-types = { path = "../core/types", version = "=0.6.0" }
mc-sgx-util = { path = "../util", version = "=0.6.0" }

[dev-dependencies]
yare = "1.0.1"
