[package]
name = "mc-sgx-quote-verify"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sha2 = "0.10.2"
hex = "0.4.3"
displaydoc = "0.2.3"
p256 = { version = "0.11.1", features = [ "ecdsa", "pem" ] }
x509-parser = { version = "0.14.0", features = [ "verify" ] }

[dev-dependencies]
base64 = "0.13.0"
