[package]
name = "mc-sgx-sdk-tools"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["development-tools::build-utils"]
description = "Tools for building SGX enclaves"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["build", "sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
displaydoc = "0.2.3"
mc-sgx-core-build = { path = "../core/build", version = "=0.6.0" }

[dev-dependencies]
tempfile = "3.3.0"
