[package]
name = "mc-sgx-sdk-tools"
version = "0.7.1"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.65"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Tools for building SGX enclaves"
categories = ["development-tools::build-utils"]
keywords = ["build", "sgx"]

[dependencies]
displaydoc = "0.2.3"
mc-sgx-core-build = { path = "../core/build", version = "=0.7.1" }

[dev-dependencies]
tempfile = "3.3.0"
