[package]
name = "mc-sgx-trts"
version = "0.3.1-beta.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Rust wrappers for the `sgx_capable` library."

categories = ["api-bindings", "hardware-support"]
keywords = ["sgx"]

[lib]
# test false due to needing an enclave to fully link
test = false
doctest = false

[dependencies]
mc-sgx-trts-sys = { path = "sys", version = "=0.3.1-beta.0" }
