[package]
name = "mc-sgx-trts"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for `sgx_trts`."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
# test false due to needing an enclave to fully link
test = false
doctest = false

[dependencies]
mc-sgx-trts-sys = { path = "sys", version = "=0.6.0" }
