[workspace]
resolver = "2"
members = [
    "crypto/sys/types",
    "crypto/sys",
    "panic/abort",
    "service/sys",
    "service/sys/types",
    "trts/sys",
]

[profile.dev]
opt-level = 0
rpath = true
lto = true

[profile.release]
opt-level = 3
rpath = false
lto = true
debug-assertions = false
overflow-checks = false

# Skip the need for LD_LIBRARY_PATH in `cargo test`
[profile.test]
rpath = true
