[package]
name = "mc-sgx-tservice"
version = "0.2.1"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Rust wrappers for the `sgx_tservice` library."

categories = ["api-bindings", "hardware-support"]
keywords = ["sgx"]

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-core-sys-types = { path = "../core/sys/types", version = "=0.2.1" }
mc-sgx-core-types = { path = "../core/types", version = "=0.2.1" }
mc-sgx-tservice-sys = { path = "sys", version = "=0.2.1" }
mc-sgx-tservice-sys-types = { path = "sys/types", version = "=0.2.1" }
mc-sgx-tservice-types = { path = "types", version = "=0.2.1", features = [ "alloc" ] }
mc-sgx-util = { path = "../util", version = "=0.2.1" }

[dev-dependencies]
mc-sgx-tservice-types = { path = "types", version = "=0.2.1", features = [ "test-utils" ] }
yare = "1.0.2"
