[package]
name = "mc-sgx-tservice"
version = "0.7.2"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Rust wrappers for the `sgx_tservice` library."
categories = ["api-bindings", "hardware-support"]
keywords = ["sgx"]

[lib]
# test false due to needing trts, and thus an enclave to fully link
test = false
doctest = false

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-core-sys-types = { path = "../core/sys/types", version = "=0.7.2" }
mc-sgx-core-types = { path = "../core/types", version = "=0.7.2" }
mc-sgx-trts = { path = "../trts", version = "=0.7.2" }
mc-sgx-tservice-sys = { path = "sys", version = "=0.7.2" }
mc-sgx-tservice-sys-types = { path = "sys/types", version = "=0.7.2" }
mc-sgx-tservice-types = { path = "types", version = "=0.7.2", features = [ "alloc" ] }
mc-sgx-util = { path = "../util", version = "=0.7.2" }
serde = { version = "1.0.173", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
mc-sgx-tservice-types = { path = "types", version = "=0.7.2", features = [ "test-utils" ] }
yare = "1.0.2"
