[package]
name = "mc-sgx-tstdc"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrappers around SGX synchronization primitives"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
# test false due to needing an enclave to fully link
test = false
doctest = false

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
libc = { version = "0.2.139", default-features = false }
mc-sgx-tstdc-sys = { path = "sys", version = "0.6.0" }
mc-sgx-tstdc-sys-types = { path = "sys/types", version = "0.6.0" }
