[package]
name = "mc-sgx-urts"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for `sgx_urts`."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["ffi", "sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mc-sgx-core-sys-types = { path = "../core/sys/types", version = "=0.6.0" }
mc-sgx-core-types = { path = "../core/types", version = "=0.6.0" }
mc-sgx-urts-sys = { path = "sys", version = "=0.6.0" }
mc-sgx-urts-sys-types = { path = "sys/types", version = "=0.6.0" }
mc-sgx-util = { path = "../util", version = "=0.6.0" }

[features]
sim = ["mc-sgx-urts-sys/sim"]
default = []
