[package]
name = "mc-sgx-urts"
version = "0.10.1"
authors = ["MobileCoin"]
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for `sgx_urts`."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[dependencies]
mc-sgx-core-sys-types = { path = "../core/sys/types", version = "=0.10.1" }
mc-sgx-core-types = { path = "../core/types", version = "=0.10.1" }
mc-sgx-urts-sys = { path = "sys", version = "=0.10.1" }
mc-sgx-urts-sys-types = { path = "sys/types", version = "=0.10.1" }
mc-sgx-util = { path = "../util", version = "=0.10.1" }

[features]
sim = ["mc-sgx-urts-sys/sim"]
default = []
