[package]
name = "mc-sgx-util"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["no-std"]
description = "Utilities shared by SGX libraries"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["ffi", "no-std", "sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
