[package]
name = "mc-sgx-util"
version = "0.11.0"
authors = ["MobileCoin"]
categories = ["no-std"]
description = "Utilities shared by SGX libraries"
edition = "2021"
keywords = ["ffi", "no-std", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"
