[package]
name = "mc-sgx-capable-sys"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["external-ffi-bindings", "hardware-support"]
description = "FFI linkage for the `sgx_capable` library."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["ffi", "sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
doctest = false

[dependencies]
mc-sgx-capable-sys-types = { path = "types", version = "=0.6.0" }
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.6.0" }

[build-dependencies]
bindgen = "0.65.1"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build", version = "=0.6.0" }
