[package]
name = "mc-sgx-capable-sys"
version = "0.8.0"
authors = ["MobileCoin"]
categories = ["external-ffi-bindings", "hardware-support"]
description = "FFI linkage for the `sgx_capable` library."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[lib]
doctest = false

[dependencies]
mc-sgx-capable-sys-types = { path = "types", version = "=0.8.0" }
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.8.0" }

[build-dependencies]
bindgen = "0.68.1"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build", version = "=0.8.0" }
