[package]
name = "mc-sgx-capable-types"
version = "0.4.2"
authors = ["MobileCoin"]
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for SGX capabilities types."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[features]
default = []
serde = [
    "dep:serde",
    "mc-sgx-core-types/serde"
]

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-capable-sys-types = { path = "../sys/types", version = "=0.4.2" }
mc-sgx-core-types = { path = "../../core/types", version = "=0.4.2" }
mc-sgx-util = { path = "../../util", version = "=0.4.2" }
serde = { version = "1.0.152", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
yare = "1.0.1"
