[package]
name = "mc-sgx-capable-types"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for SGX capabilities types."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["ffi", "sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
serde = [
    "dep:serde",
    "mc-sgx-core-types/serde"
]

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-capable-sys-types = { path = "../sys/types", version = "=0.6.0" }
mc-sgx-core-types = { path = "../../core/types", version = "=0.6.0" }
mc-sgx-util = { path = "../../util", version = "=0.6.0" }
serde = { version = "1.0.152", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
yare = "1.0.1"
