[package]
name = "mc-sgx-core-types"
# When updating version, update the deps.rs link in README.md
version = "0.1.0"
authors = ["MobileCoin"]
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for common SGX types."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[features]
default = []
serde = [
    "dep:serde"
]

[dependencies]
bitflags = "1.3.2"
mc-sgx-core-sys-types = { path = "../sys/types", version = "=0.1.0" }
mc-sgx-util = { path = "../../util", version = "=0.1.0" }
rand_core = { version = "0.6.3", default-features = false }
serde = { version = "1.0.144", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
yare = "1.0.1"
rand = "0.8.5"
