[package]
name = "mc-sgx-core-types"
version = "0.4.2"
authors = ["MobileCoin"]
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for common SGX types."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[features]
default = []
serde = [
    "dep:serde"
]
alloc = []

[dependencies]
bitflags = "1.3.2"
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-core-sys-types = { path = "../sys/types", version = "=0.4.2" }
mc-sgx-util = { path = "../../util", version = "=0.4.2" }
nom = { version = "7.1.2", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive"], optional = true }

# `getrandom` is pulled in by `rand_core` we only need to access it directly when registering a custom spng,
# `register_custom_getrandom`, which only happens for target_os = none
[target.'cfg(target_os = "none")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

[dev-dependencies]
rand = "0.8.5"
yare = "1.0.1"
