[package]
name = "mc-sgx-core-types"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for common SGX types."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["ffi", "sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
alloc = []

[dependencies]
bitflags = "2.0.0"
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-core-sys-types = { path = "../sys/types", version = "=0.6.0" }
mc-sgx-util = { path = "../../util", version = "=0.6.0" }
nom = { version = "7.1.2", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive"], optional = true }

# `getrandom` is pulled in by `rand_core` we only need to access it directly when registering a custom spng,
# `register_custom_getrandom`, which only happens for target_os = none
[target.'cfg(target_os = "none")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

[dev-dependencies]
rand = "0.8.5"
textwrap = "0.16.0"
yare = "1.0.1"
