[package]
name = "mc-sgx-crypto-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
mc-sgx-core-ffi-types = { path = "../../core/ffi/types" }
mc-sgx-crypto-ffi-types = { path = "types" }

[dev-dependencies]
sha2 = "0.10.2"

[build-dependencies]
bindgen = "0.60.1"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build" }
