[package]
name = "mc-sgx-dcap-ql"
version = "0.11.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Rust wrappers for the `sgx_dcap_ql` library."

categories = ["api-bindings", "hardware-support"]
keywords = ["sgx"]

[dependencies]
displaydoc = { version = "0.2", default-features = false }
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.11.0" }
mc-sgx-core-types = { path = "../../core/types", version = "=0.11.0" }
mc-sgx-dcap-ql-sys = { path = "sys", version = "=0.11.0" }
mc-sgx-dcap-ql-types = { path = "types", version = "=0.11.0" }
mc-sgx-dcap-types = { path = "../types", version = "=0.11.0", features = ["alloc"] }
mc-sgx-util = { path = "../../util", version = "=0.11.0" }
once_cell = "1"

[features]
default = []

# Used to prevent tests from running in sim environments
sim = []

[dev-dependencies]
serial_test = { version = "2", default-features = false }
tempfile = "3"
yare = "2"
