[package]
name = "mc-sgx-dcap-quoteverify"
version = "0.2.1-pre"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Rust wrappers for the `libsgx_dcap_quoteverify` library."

categories = ["api-bindings", "hardware-support"]
keywords = ["sgx"]

[dependencies]
mc-sgx-dcap-quoteverify-sys = { path = "sys", version = "=0.2.1-pre" }
mc-sgx-dcap-quoteverify-sys-types = { path = "sys/types", version = "=0.2.1-pre" }
mc-sgx-dcap-quoteverify-types = { path = "types", version = "=0.2.1-pre" }
mc-sgx-dcap-types = { path = "../types", version = "=0.2.1-pre" }
mc-sgx-util = { path = "../../util", version = "=0.2.1-pre" }

[dev-dependencies]
mc-sgx-dcap-sys-types = { path = "../sys/types", version = "=0.2.1-pre" }
tempfile = "3.3.0"
yare = "1.0.1"
