[package]
name = "mc-sgx-dcap-quoteverify"
version = "0.4.1-beta.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Rust wrappers for the `libsgx_dcap_quoteverify` library."

categories = ["api-bindings", "hardware-support"]
keywords = ["sgx"]

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-dcap-quoteverify-sys = { path = "sys", version = "=0.4.1-beta.0" }
mc-sgx-dcap-quoteverify-sys-types = { path = "sys/types", version = "=0.4.1-beta.0" }
mc-sgx-dcap-quoteverify-types = { path = "types", version = "=0.4.1-beta.0" }
mc-sgx-dcap-types = { path = "../types", version = "=0.4.1-beta.0" }
mc-sgx-util = { path = "../../util", version = "=0.4.1-beta.0" }
once_cell = "1.17.0"

[dev-dependencies]
mc-sgx-dcap-sys-types = { path = "../sys/types", version = "=0.4.1-beta.0" }
serial_test = { version = "1.0.0", default-features = false }
tempfile = "3.3.0"
yare = "1.0.1"
