[package]
name = "mc-sgx-dcap-quoteverify"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrappers for the `libsgx_dcap_quoteverify` library."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-dcap-quoteverify-sys = { path = "sys", version = "=0.6.0" }
mc-sgx-dcap-quoteverify-sys-types = { path = "sys/types", version = "=0.6.0" }
mc-sgx-dcap-quoteverify-types = { path = "types", version = "=0.6.0" }
mc-sgx-dcap-types = { path = "../types", version = "=0.6.0" }
mc-sgx-util = { path = "../../util", version = "=0.6.0" }
once_cell = "1.17.0"

[dev-dependencies]
mc-sgx-dcap-sys-types = { path = "../sys/types", version = "=0.6.0" }
serial_test = { version = "2.0.0", default-features = false }
tempfile = "3.3.0"
yare = "1.0.1"
