[package]
name = "mc-sgx-dcap-types"
version = "0.6.0"
authors = ["MobileCoin"]
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for common DCAP types."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[features]
default = []
serde = ["dep:serde"]
alloc = []

[dependencies]
constant_time_derive = { path = "../../constant_time_derive", version = "0.1.0" }
displaydoc = { version = "0.2.3", default-features = false }
mc-sgx-core-types = { path = "../../core/types", version = "=0.6.0" }
mc-sgx-dcap-sys-types = { path = "../sys/types", version = "=0.6.0" }
mc-sgx-util = { path = "../../util", version = "=0.6.0" }
nom = { version = "7.1.2", default-features = false }
p256 = { version = "0.13.0", default-features = false, features = ["ecdsa-core", "ecdsa"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"], optional = true }
sha2 = { version = "0.10.6", default-features = false }
static_assertions = "1.1.0"
subtle = { version = "2.4.1", default-features = false }

[dev-dependencies]
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.6.0" }
textwrap = "0.16.0"
yare = "1.0.1"
