[package]
name = "mc-sgx-dcap-types"
version = "0.6.1"
authors = ["MobileCoin"]
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for common DCAP types."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[features]
default = []
alloc = ["dep:x509-cert"]
tcb = ["alloc", "dep:x509-cert", "dep:const-oid", "dep:hex"]

[dependencies]
const-oid = { version = "0.9.2", default-features = false, optional = true }
displaydoc = { version = "0.2.3", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }
mc-sgx-core-types = { path = "../../core/types", version = "=0.6.1" }
mc-sgx-dcap-sys-types = { path = "../sys/types", version = "=0.6.1" }
mc-sgx-util = { path = "../../util", version = "=0.6.1" }
nom = { version = "7.1.2", default-features = false }
p256 = { version = "0.13.0", default-features = false, features = ["ecdsa-core", "ecdsa"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.6", default-features = false }
static_assertions = "1.1.0"
subtle = { version = "2.4.1", default-features = false }
x509-cert = { version = "0.2.3", default-features = false, features = ["pem"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.6.1" }
textwrap = "0.16.0"
x509-cert = { version = "0.2.3", default-features = false, features = ["pem"] }
yare = "1.0.1"
